9452
Gotcha. This fails:

{noformat}
rm -rf target/locker/library/classes/scala &&                \
> export LIB=build/pack/lib;                                   \
> java -Xmx1G -cp $LIB/scala-library.jar:$LIB/scala-reflect.jar:$LIB/scala-compiler.jar:$LIB/forkjoin.jar \
>   scala.tools.nsc.Main                                       \
>    -classpath lib/forkjoin.jar:target/locker/library/classes \
>    -sourcepath src/library                                   \
>    -d target/locker/library/classes                          \
>    src/library/scala/{Predef,LowPriorityImplicits}.scala
src/library/scala/Predef.scala:72: error: illegal cyclic reference involving object Predef
object Predef extends LowPriorityImplicits with DeprecatedPredef {
                      ^
one error found
{noformat}
